--- a/src/api/api.csproj
+++ b/src/api/api.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="dotnetenv" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
     <PackageReference Include="Microsoft.Kiota.Http.HttpClientLibrary" Version="1.3.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
@@ -16,5 +17,8 @@
   <ItemGroup>
     <ProjectReference Include="..\tafutalib\tafutalib.csproj" />
   </ItemGroup>
-
+  <ItemGroup>
+    <!-- Create embedded resource -->
+    <EmbeddedResource Include="search.html" />
+  </ItemGroup>
 </Project>
